@@ -42,7 +42,7 @@ common_network_HealthCheckedConnectionTester_CXXFLAGS = $(COMMON_TESTING_FLAGS)
 common_network_HealthCheckedConnectionTester_LDADD = $(COMMON_TESTING_LIBS)
 
 common_network_NetworkTester_SOURCES = \
-    common/network/IPAddressTest.cpp \
+    common/network/IPV4AddressTest.cpp \
     common/network/InterfacePickerTest.cpp \
     common/network/InterfaceTest.cpp \
     common/network/MACAddressTest.cpp \
